# eba

./: .gitignore  INSTALL.md  README.md  eba.install
docs/: monitor-templates.md  repository-structure.md
scripts/docker-eval/: Dockerfile  README.md  build-docker.sh  clone-linux-build-docker.sh  docker-checkout-make.sh  log.txt  make-and-evaluate.sh  run_tests_from_file.py  test_uaf.txt
scripts/docker-eval/5ae6a6a/: 5ae6a6a.txt
scripts/docker-eval/af3cf0a/: af3cf0a.txt
src/: abs.ml  automataChecker.ml  cfgPrinter.ml  cfgPrinterDoubleLock.ml  cfgPrinter_test.ml  checkAutomata.ml  checkAutomataDoubleLock.ml  checkAutomataDoubleUnlock.ml  checkAutomataDoubleUnlockWithInitial.ml  checkAutomataUseAfterFree.ml  checkDFreeFlow2.ml  cilExtra.ml  dune  eba.ml  lenv.ml  lockingAutomataHelper.ml  opts.ml  opts.mli  pP.ml  pathTree.ml  pathTree.mli  type.ml  type_test.ml  utils.ml
test/: aa340845ae6-reduced.c  double-unlock.c  generics.c
